@@ -1,5 +1,8 @@
 [Changes 1.2c01]
 
+* Apply patch from snadge defining BIND_4_COMPAT on OpenBSD, to allow
+  /nslookup to build. (caf) 
+
 * Fix known problem with IPv6 on FreeBSD and enable IPv6 on all supporting
   platforms. Thanks to brabes, snadge and packet. (caf)
 
